// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InjectDropdownMenuItem should render MenuItem with Inject 1`] = `
<MenuItem
  onKeyDown={[MockFunction]}
  onSelect={[MockFunction]}
  stuff="MyItemProps"
>
  <Inject
    component="Action"
    getComponent={[Function]}
  />
</MenuItem>
`;

exports[`InjectDropdownMenuItem should render MenuItem with props divider 1`] = `<React.Fragment />`;

exports[`InjectDropdownMenuItem should render li with Inject 1`] = `
<li
  role="presentation"
  stuff="MyLiProps"
>
  <Inject
    component="Action"
    getComponent={[Function]}
  />
</li>
`;

exports[`getMenuItem should return a MenuItem with divider 1`] = `<React.Fragment />`;

exports[`getMenuItem should return a MenuItem with icon and label 1`] = `
<withI18nextTranslation(ActionButton)
  available={true}
  bsStyle="default"
  className="theme-tc-dropdown-item tc-dropdown-item"
  data-feature="action.feature"
  disabled={false}
  eventKey={
    Object {
      "data-feature": "action.feature",
      "icon": "talend-bell",
      "label": "Toto",
    }
  }
  icon="talend-bell"
  inProgress={false}
  label="Toto"
  loading={false}
  onClick={[Function]}
  t={[Function]}
  title="Toto"
  tooltipPlacement="top"
>
  <Icon
    name="talend-bell"
  />
  Toto
</withI18nextTranslation(ActionButton)>
`;

exports[`getMenuItem should return a MenuItem with label 1`] = `
<withI18nextTranslation(ActionButton)
  available={true}
  bsStyle="default"
  className="theme-tc-dropdown-item tc-dropdown-item"
  data-feature="action.feature"
  disabled={false}
  eventKey={
    Object {
      "data-feature": "action.feature",
      "label": "Toto",
    }
  }
  inProgress={false}
  label="Toto"
  loading={false}
  onClick={[Function]}
  t={[Function]}
  title="Toto"
  tooltipPlacement="top"
>
  Toto
</withI18nextTranslation(ActionButton)>
`;
